Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24846

[Regression] Some fonts are almost illegible when rotated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0
    • 5.0.0
    • GUI: Font handling
    • None
    • Windows 7, MSVC 64bit

      Rotated text is almost illegible on some font/size combinations when using freetype font engine - see attached pictures. As can be seen, this worked much better in Qt 4.8.

      Also note that the font advances are clearly wrong sometimes.

        1. Qt 5.0 Scaled and Rotated font in Windows - highlighted.png
          222 kB
          Miikka Heikkinen
        2. Qt 4.8 Scaled and Rotated font in Windows.png
          138 kB
          Miikka Heikkinen
        3. main.cpp
          1 kB
          Miikka Heikkinen
        4. Qt 4.8 with red lines.png
          139 kB
          Thorbjørn Lund Martsum
        5. linux_rotate_arial.png
          145 kB
          Thorbjørn Lund Martsum
        6. linux_rotate_nimbus.png
          171 kB
          Thorbjørn Lund Martsum
        7. arial_linux_rotate_with_patch.png
          206 kB
          Thorbjørn Lund Martsum
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            e0348803 Miikka Heikkinen
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes