Disable hinting for scaled glyphs in FreeType

Scaling hinted glyphs looks ugly, and it makes smooth scaling
animation not possible. Since nothing will work as intended
in hinted mode, we should disable hinting automatically when
glyphs are loaded with scaling transformation.

Task-number: QTBUG-24846
Change-Id: Id7fb5f5bdc2d00be157b0c5d55c316473571473c
Reviewed-by: Thorbjørn Lund Martsum <tmartsum@gmail.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>

cregit: 6da6845f078e419ccb555fe1dd152e0ba82a7e88 https://github.com/qt/qtbase/commit/6da6845f078e419ccb555fe1dd152e0ba82a7e88